# hisss

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CMakeLists.txt  README.md  hatch_build.py  main.py  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build-and-publish.yml  cicd.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/hisss/: __init__.py  shared.py
src/hisss/cpp/: CMakeLists.txt  lib.py  link.cpp  linux_compile.sh  windows_compile.bat
src/hisss/cpp/header/: battlesnake.h  battlesnake_helper.h
src/hisss/cpp/source/: battlesnake.cpp  battlesnake_helper.cpp  link.cpp
src/hisss/equilibria/: nash.py
src/hisss/game/: battlesnake.py  config.py  encoding.py  export.py  rewards.py  state.py  utils.py
test/bootcamp/: test_envs_11x11.py  test_envs_3x3.py  test_envs_5x5.py  test_envs_7x7.py  test_envs_9x9.py
test/data/: example_move.json
test/equilibria/: test_nash_cpp.py
test/game/: test_constrictor.py  test_cpp.py  test_cpp_encoding.py  test_elimination.py  test_export.py  test_fixed_spawning.py  test_hazards.py  test_rewards.py  test_state.py  test_wrapped.py
